# YuanShenRedirect

./: build.gradle  gradle.properties  module.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  game.h  hack.cpp  il2cpp_dump.cpp  main.cpp  open_hook.c  open_hook.h  zygisk.hpp
module/src/main/cpp/bhook/: bh_jni.c  bytehook.map.txt
